# seedsigner-lvgl-screens

./: .gitignore  .gitlab-ci.yml  README.md  manifest.json  usercmodule.cmake
.forgejo/workflows/: screen-runner.yml  screenshots.yml
.github/workflows/: pages.yml  runner-core-test.yml  screen-runner.yml  screenshots.yml
bindings/: display_manager_shim.cpp  micropython.cmake  moddisplay_manager_bindings.c  moddisplay_manager_bindings.cpp  modseedsigner_bindings.c
components/display_manager/: CMakeLists.txt  display_manager.cpp  display_manager.h
components/lvgl_ui/tileview/: axp2101_tile.cpp  camera_tile.cpp  qmi8658_tile.cpp  system_tile.cpp  wifi_tile.cpp
components/nlohmann_json/: CMakeLists.txt
components/poc/: micropython.cmake  modpoc_bindings.c
components/poc/src/: poc_core.c  poc_core.h
components/seedsigner/: CMakeLists.txt  TODO.md  camera_entropy_overlay.cpp  camera_entropy_overlay.h  camera_preview_overlay.cpp  components.cpp  components.h  font_registry.cpp  glyph_runs.cpp  glyph_runs.h  gui_constants.cpp  gui_constants.h  input_profile.cpp  input_profile.h  locale_fonts.cpp  locale_fonts.h  locale_picker.h  navigation.cpp  navigation.h  overlay_manager.h  qr_core.cpp  qr_core.h  screen_helpers.cpp  screen_helpers.h  screen_scaffold.cpp  screen_scaffold.h  screen_sources.cmake  seedsigner.cpp  seedsigner.h
components/seedsigner/fonts/: inconsolata_semibold_18_4bpp.c  inconsolata_semibold_18_4bpp_150x.c  inconsolata_semibold_18_4bpp_200x.c  inconsolata_semibold_24_4bpp_150x.c  opensans_semibold_18_2bpp.c  opensans_semibold_18_4bpp_125x.c  opensans_semibold_18_4bpp_150x.c  opensans_semibold_18_4bpp_200x.c  opensans_semibold_20_1bpp.c  opensans_semibold_20_2bpp.c  opensans_semibold_20_4bpp_125x.c  opensans_semibold_20_4bpp_150x.c  opensans_semibold_20_4bpp_200x.c  opensans_semibold_26_4bpp_150x.c  opensans_semibold_26_4bpp_200x.c  opensans_western.h  opensans_western_regular.c  opensans_western_semibold.c  seedsigner_icons_24_4bpp_125x.c  seedsigner_icons_24_4bpp_150x.c  seedsigner_icons_24_4bpp_200x.c  seedsigner_icons_26_4bpp.c  seedsigner_icons_26_4bpp_133x.c  seedsigner_icons_26_4bpp_200x.c  seedsigner_icons_36_4bpp_125x.c  seedsigner_icons_36_4bpp_150x.c  seedsigner_icons_36_4bpp_200x.c  seedsigner_icons_48_4bpp_150x.c
components/seedsigner/images/: hrf_logo_img.c  hrf_logo_img_133x.c  hrf_logo_img_200x.c  seedsigner_logo_img.c  seedsigner_logo_img_133x.c  (+1 more)
docs/: IMPORT_NOTES-2026-02-26.md  INPUT_NAVIGATION_IMPLEMENTATION_PLAN.md  SCREEN_RUNNER.md  UPSTREAM_DEVIATIONS.md  button-list-focus-restore-scroll-then-buttons.md  button-list-intro-text-spacing-parity.md  button_list_screen_parity.md  complex-script-shaping-spike-plan.md  font-and-i18n-implementation-plan.md  font-and-i18n-rendering.md  font-farsi-rtl-plan.md  font-low-dpi-rendering-plan.md  font-tiering-plan.md  locale-picker-font-plan.md  opening-splash-screen-plan.md  poc-module.md  screen-conformance-pilot-report.md  screen-conformance-spec.md  screen-file-layout-and-naming.md  screen_implementation_plan.md  status-icon-override-spec.md
docs/knowledge/: button-list-focus-under-overflow.md  button-list-initial-selection-scroll-animation.md  ci-pyicu-no-wheels.md  font-loading-binfont-vs-tiny-ttf.md  glyph-run-scroll-offset.md  glyph-run-single-line-label-wrap-collapse.md  hardware-focus-label-marquee.md  lvgl-keyboard-text-entry.md  static-screenshot-freezes-pre-animation-frame.md  touch-long-press-scroll.md
scripts/: prep_splash_sources.py
scripts/ci/: ci.sh  screenshots.sh
tests/: README-screenshot-gen.md  screenshot_gen.c  screenshot_gen.cpp
tests/screenshot_generator/: CMakeLists.txt  README.md  scenarios.json  screenshot_gen.cpp
tests/screenshot_generator/screenshots/: manifest.json
tools/: README.md  scenarios.json
tools/fontpack/: build_lang_font.py  gen_localized_scenarios.py
tools/i18n/: README.md  build_fontpacks.py  gen_localized_scenarios.py  supported_locales.json
tools/i18n/shaper/: CMakeLists.txt  README.md  lv_shape.c
tools/scenarios/: scenarios.json
tools/screen_runner/: CMakeLists.txt  README.md  screen_runner.cpp
tools/screenshot_generator/: CMakeLists.txt  README.md  screenshot_gen.cpp
tools/web_runner/: CMakeLists.txt  README.md  build.sh  gen_scenarios.py  serve.sh  shell.html  web_runner.cpp
(+60 files in other folders)
